@@ -5,7 +5,7 @@
     
     <groupId>edu.internet2.middleware</groupId>
     <artifactId>shibboleth-identityprovider</artifactId>
-    <version>2.1.5</version>
+    <version>2.2.0-SNAPSHOT</version>
     
     <!-- We bundle as a jar here, the installer creates the WAR -->
     <packaging>jar</packaging>
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>edu.internet2.middleware</groupId>
             <artifactId>shibboleth-common</artifactId>
-            <version>1.1.4</version>
+            <version>1.2.0</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -363,7 +363,7 @@
     </profiles>
     
     <!-- Project Metadata -->
-    <url>https://shibboleth.internet2.edu/</url>
+    <url>http://shibboleth.internet2.edu/</url>
     
     <inceptionYear>2006</inceptionYear>
     
